Fix Section Buttons Not Fitting
Decreased the max-width of the middleContainerSize css class

--- a/org.eclipse.winery.repository.ui/src/app/section/entityContainer/entityContainer.component.css
+++ b/org.eclipse.winery.repository.ui/src/app/section/entityContainer/entityContainer.component.css
@@ -41,15 +41,15 @@
 }
 
 .largeContainer {
-    max-width: 313px;
+    max-width: 274px;
 }
 
 .middleContainerSize {
-    max-width: 258px;
+    max-width: 214px;
 }
 
 .smallContainer {
-    max-width: 198px;
+    max-width: 154px;
 }
 
 .treeBranch {
