--- a/org.eclipse.winery.repository.ui/src/css/wineryRepository.css
+++ b/org.eclipse.winery.repository.ui/src/css/wineryRepository.css
@@ -550,7 +550,6 @@ div.entityContainer > div.center > div.informationContainer {
     text-decoration: none;
     text-shadow: 1px 1px 0 white;
     float: left;
-    max-width: 274px;
 }
 
 div.entityContainer > div.center > div.informationContainer > div.name {
@@ -963,7 +962,6 @@ div.entityContainer.patternRefinementModel > div.right {
 div.entityContainer > div.center > div.buttonContainer {
     float: right;
     height: 42px;
-
     margin-top: 23px;
     margin-left: 40px;
 }
